--- a/kubernetes-templating/custom-nginx-chart/templates/deployment.yaml
+++ b/kubernetes-templating/custom-nginx-chart/templates/deployment.yaml
@@ -20,10 +20,46 @@ spec:
     spec:
       serviceAccountName: {{$app.podSaName}}
       containers: {{ range $app.containers }}
-{{ if .create}}
+{{- if .create}}
       - name: {{.name}}
         image: {{.image}}:{{.tag}}
         volumeMounts:  {{ range .volumeMounts }}
           -{{toYaml . | nindent 12 }}{{ end }}
-  {{end}}
-  {{end}}
+      {{- if .livelinessProbeEnable}}
+        livelinessProbe:
+          httpGet:
+            path: /
+            port: 8000
+      {{- end}}
+       {{- if .lifecycleEnable}}
+        lifecycle:
+          preStop:
+            exec:
+              command: ["/bin/sh", "-c", "rm /homework/index.html" ]
+  {{- end}}
+{{- end}}
+      initContainers:
+{{- range $app.initContainers }}
+      {{- if .create}}
+      -
+        name: {{.name}}
+        image: {{.image}}:{{.tag}}
+        volumeMounts:
+          {{- range .volumeMounts }}
+          -{{toYaml . | nindent 12 }}
+          {{- end }}
+        command:
+           {{- range .command }}
+           -{{toYaml . | quote | nindent 12}}
+           {{- end }}
+        {{- if .args }}
+        args: {{.args}}
+        {{- end}}
+      {{- end}}
+{{- end}}
+      volumes:
+      {{- range $app.volumes }}
+      - name: {{ .name }}
+      {{- toYaml .data | nindent 8 }}
+      {{- end}}
+{{- end}}
