--- a/kubernetes-templating/custom-nginx-chart/templates/storageClass.yaml
+++ b/kubernetes-templating/custom-nginx-chart/templates/storageClass.yaml
@@ -1,6 +1,6 @@
 {{ if .Values.storageclass.create }}
 ---
-apiVersion: storage.k8s.io/v1beta1
+apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: {{ .Values.storageclass.name }}
